Fix. Centered Items Icons
- Icons where not centered.

--- a/components/UI/Information/ServiceInfo.module.css
+++ b/components/UI/Information/ServiceInfo.module.css
@@ -73,6 +73,9 @@
   width: 15px;
   height: 15px;
   margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .item__text {
